--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,21 @@
     </build>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/gov.nist.math/jama -->
+        <!-- Spring boot dependencies. -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.1.6.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>2.1.6.RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+
+
+        <!-- Jama matrix -->
         <dependency>
             <groupId>gov.nist.math</groupId>
             <artifactId>jama</artifactId>
@@ -36,7 +50,7 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-core</artifactId>
+            <artifactId>mockito-com.ecnu.refactoring.core</artifactId>
             <version>2.23.4</version>
             <scope>test</scope>
         </dependency>
@@ -47,10 +61,10 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
+        <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-com.ecnu.refactoring.core -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
+            <artifactId>log4j-com.ecnu.refactoring.core</artifactId>
             <version>2.11.2</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/guru.nidi/graphviz-java -->
@@ -62,22 +76,13 @@
 
 
 
-        <dependency>
-            <groupId>slf4j-simple</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.5.2</version>
-        </dependency>
+        <!-- Log -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jdk14</artifactId>
             <version>1.7.25</version>
         </dependency>
-        <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
-        </dependency>
+
 
 
     </dependencies>
