--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,14 @@
             <version>1.7.25</version>
         </dependency>
 
+        <!--lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+            <scope>provided</scope>
+        </dependency>
+
 
 
     </dependencies>
