--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
-server.port=8090
+server.port=8091
+multipart.enabled=true
+
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.database=0
+spring.redis.jedis.pool.max-active=100
+spring.redis.jedis.pool.max-wait=10
+spring.redis.jedis.pool.max-idle=10
+spring.redis.jedis.pool.min-idle=10
+
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/reconstruction
+spring.datasource.username=root
+spring.datasource.password=980817
+mybatis.type-aliases-package=com.ecnu.refactoring.dao
