--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/reconstruction
 spring.datasource.username=root
 spring.datasource.password=980817
 mybatis.type-aliases-package=com.ecnu.refactoring.dao
+
+management.endpoints.web.exposure.include=*
+#security.basic.enabled=false
+#management.security.enabled=false
+management.port=11679
