--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,6 @@
         </dependency>
 
 
-
         <!-- Log -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -104,7 +103,6 @@
             <artifactId>spring-session-data-redis</artifactId>
             <version>2.2.2.RELEASE</version>
         </dependency>
-
 
 
         <dependency>
@@ -140,14 +138,16 @@
         </dependency>
 
 
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-actuator</artifactId>
-            </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-actuator</artifactId>-->
+<!--            <version>2.2.5.RELEASE</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--            <version>2.2.5.RELEASE</version>-->
+<!--        </dependency>-->
 
     </dependencies>
     <repositories>
