--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8091
-multipart.enabled=true
+spring.servlet.multipart.enabled=true
 
 spring.redis.host=localhost
 spring.redis.port=6379
@@ -10,12 +10,13 @@ spring.redis.jedis.pool.max-idle=10
 spring.redis.jedis.pool.min-idle=10
 
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/reconstruction
+spring.datasource.url=jdbc:mysql://localhost:3306/reconstruction?serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=980817
+spring.datasource.password=admin123
 mybatis.type-aliases-package=com.ecnu.refactoring.dao
 
 management.endpoints.web.exposure.include=*
 #security.basic.enabled=false
 #management.security.enabled=false
-management.port=11679
+management.server.port=11679
+security.basic.enable=false
